@@ -1072,7 +1072,7 @@ void mdata_select_last_var (void)
     gtk_tree_selection_select_iter(select, &iter);
 }
 
-static void mdata_real_select_list (const int *list)
+static void real_select_list (const int *list)
 {
     GtkTreeIter iter;
     GtkTreeView *view;
@@ -1117,7 +1117,9 @@ static void mdata_select_list (void)
 	if (!cancel) {
 	    int *list = get_list_by_name(lname);
 
-	    mdata_real_select_list(list);
+	    if (list != NULL) {
+		real_select_list(list);
+	    }
 	}
     }
 }
@@ -1427,7 +1429,7 @@ GtkActionEntry main_entries[] = {
     { "Data", NULL, N_("_Data"), NULL, NULL, NULL },
     { "DataSelectAll", NULL, N_("Select _all"), "<control>A", NULL, G_CALLBACK(mdata_select_all) },
     { "DefineList", NULL, N_("Define _list..."), NULL, NULL, G_CALLBACK(gui_define_list) },
-    { "SelectList", NULL, N_("_Select list..."), NULL, NULL, G_CALLBACK(mdata_select_list) },
+    { "SelectList", NULL, N_("_Select listed variables..."), NULL, NULL, G_CALLBACK(mdata_select_list) },
     { "DisplayValues", NULL, N_("_Display values"), NULL, NULL, G_CALLBACK(display_selected) },
     { "EditValues", NULL, N_("_Edit values"), NULL, NULL, G_CALLBACK(spreadsheet_edit) },
     { "AddObs", NULL, N_("_Add observations..."), NULL, NULL, G_CALLBACK(do_add_obs) },
